--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2",
-    "redux": "^4.0.4"
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.4",
+    "typed-reducer": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
