--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "react": "^16.10.1",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.1",
-    "react-router-dom": "^5.1.2",
+    "bootstrap": "^4.6.0",
+    "fsevents": "^2.3.1",
+    "g": "^2.0.1",
+    "jquery": "^3.5.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,10 +36,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@babel/preset-env": "^7.12.11",
+    "@types/node": "^16.4.0",
     "babel-jest": "^24.9.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "jest": "^24.9.0",
-    "react-test-renderer": "^16.10.2"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "nodemon": "^2.0.12",
+    "react-test-renderer": "^16.14.0",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   }
 }
